syntax = "proto3";

package payment.v1;

option go_package = "shared/pkg/proto/payment/v1;paymentv1";

service PaymentService {
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}
// Запрос на оплату заказа
message PayOrderRequest {
  string order_uuid = 1;
  string user_uuid = 2;
  PaymentMethod payment_method = 3;
}

// Ответ на оплату заказа
message PayOrderResponse {
  string transaction_uuid = 1;
}

// Способ оплаты
enum PaymentMethod {
  PAYMENT_METHOD_UNKNOWN_UNSPECIFIED = 0;
  PAYMENT_METHOD_CARD = 1;
  PAYMENT_METHOD_SPB = 2;
  PAYMENT_METHOD_CREDIT_CARD = 3;
  PAYMENT_METHOD_INVESTOR_MONEY = 4;
}